data/derived/comb/progs/unify/prog7812.ml.out
Characters 532-547:
  | 5      -> buildCotanget(rand, depth-1)
                           ^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type expr
